--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ theme_mode:  dark # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: 'https://random.imagecdn.app/500/150'
+img_cdn: './locals/profile.jpg'
 
 # the avatar on sidebar, support local or CORS resources
 avatar:
