--- a/_config.yml
+++ b/_config.yml
@@ -78,10 +78,10 @@ theme_mode:  dark # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: './locals/profile.jpg'
+img_cdn: 
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: './locals/profile.jpeg'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
